--- a/src/features/cart/cart.css
+++ b/src/features/cart/cart.css
@@ -1,10 +1,9 @@
 .segment {
-    width: 95%;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 5px;
+    width: 100%;
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
-    margin: auto;
-    margin-top: 10px;
     padding: 20px;
     text-align: right;
+    overflow: hidden;
+    color: white;
+    background-color: black;
 }
